@@ -10,6 +10,8 @@ Ulf Zibis <Ulf.Zibis@CoSoCo.de>
 * Fixed bugs in volumeEnumerateIncludeHidden():
   If MAX_VOLUMES were reached, last volRef was overwritten by hidden volume ref.
   Set volRefs in correct order.
+* Fixed null pointer bug, if database could not be opened. 
+* Fetch and backup files immediately after album found. 
 
 Version 0.2.1   Jul 22, 2022
 Ulf Zibis <Ulf.Zibis@CoSoCo.de>
